# endecode-tauri

./: FINAL_MIGRATION_CHECKLIST.md  MIGRATION_CHECKLIST.md  REWRITE_CHECKLIST.md  SELECT_IMPROVEMENTS.md  SETTINGS_IMPROVEMENTS.md  UX_IMPROVEMENTS_APPLIED.md  VISUAL_CHANGES_APPLIED.md  VISUAL_IMPROVEMENTS.md
app/: BUG_FIXES.md  DESIGN_SYSTEM.md  README.md  TESTING_INVISIBLE_WATERMARK.md  USAGE_INSTRUCTIONS.md  UX_IMPROVEMENTS.md  index.html  package-lock.json  package.json  test_watermark.txt
app/src/: main.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/i18n/: en.json  es.json  ru.json
app/src/ui/: batchForm.ts  console.ts  fileOperations.ts  folderPicker.ts  i18n.ts  modalManager.ts  preferences.ts  progressBar.ts  settingsManager.ts  state.ts  testForm.ts  topbar.ts  types.ts  visibleWatermarkForm.ts
