[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
image = "0.24.9"
imageproc = "0.23"
rusttype = "0.9"
anyhow = "1"
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
crc32fast = "1"
fs_extra = "1"
dirs = "6"

